--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="..//vacio/assets/css/normalize.css" />
-    <link rel="stylesheet" href="..//vacio/assets/css/style.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/normalize.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Desafio 2 css Avanzado Grid</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main><p>Aca la pagina</p></main>
+    <footer></footer>
+  </body>
 </html>
